<resources>
    <string name="app_name">aston_intensiv_contactsApp</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="id">Id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>