<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#97E2EC"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textViewId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textColor="@color/black"
            android:padding="4dp"
            android:text="@string/id"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:textColor="@color/black"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/textViewSurename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/surname"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViePhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/phoneNumber"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="invisible"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>